# weiyun-python-sdk

./: LICENSE  README.md  pyproject.toml
scripts/: benchmark_upload.py
weiyun_sdk/: __init__.py  __main__.py  cli.py  client.py  openssl_sha1.py  upload.py
