[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weiyun-python-sdk"
version = "0.1.0"
description = "腾讯微云非官方 Python SDK & CLI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests>=2.20",
]

[project.scripts]
weiyun = "weiyun_sdk.cli:main"
